deployment/auth_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        imagePullPolicy: Always
        image: tienngthth/auth-service:8
        livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /auth/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
  type: NodePort
