deployment/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-database
  labels:
    app: postgres-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-database
  template:
    metadata:
      labels:
        app: postgres-database
    spec:
      containers:
      - name: postgres-database
        image: postgres:latest
        ports:
          - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-database
spec:
  selector:
    app: postgres-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
