deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: internal-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: auth-service
                port:
                  number: 82
